FIX spacing issue due to width
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@5800 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/plugins/video_splice/css/style.css
+++ b/plugins/video_splice/css/style.css
@@ -7,13 +7,12 @@
 }
 #splice_reel {
     margin-top: 20px;
-	margin-left: 2%;
-	height: 91px;
+	margin-left: 10px;
+	height: 75px;
 	overflow:auto;
 }
 .splice_item {
 	margin-right: 5px;
 	display: inline !important;
-	width: 55px;
 	vertical-align: middle;
 }
